--- a/products.html
+++ b/products.html
@@ -37,9 +37,14 @@
     </div>
   </nav>
   <main class="pb-5 container">
+    <div class="text-center p-4">
+      <h2>Productos</h2>
+      <p class="lead">Verás aquí todos los productos de la categoria <b>Autos</b>.</p>
+    </div>
     <div class="container">
-      <div id="cat-list-container">
-        
+      <div class="row">
+        <div id="cat-list-container">
+        </div>
       </div>
     </div>
   </main>
