--- a/index.html
+++ b/index.html
@@ -60,57 +60,56 @@
       white-space: nowrap;
       -webkit-overflow-scrolling: touch;
     }
-    body {
-      display: flex;
-      align-items: center;
-      padding-top: 40px;
-      padding-bottom: 40px;
-      background-color: #f5f5f5;
-    }
+body {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
 
-    .form-signin {
-      max-width: 330px;
-      padding: 15px;
-    }
+.form-signin {
+  max-width: 330px;
+  padding: 15px;
+}
 
-    .form-signin .form-floating:focus-within {
-      z-index: 2;
-    }
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
 
-    .form-signin input[type="email"] {
-      margin-bottom: -1px;
-      border-bottom-right-radius: 0;
-      border-bottom-left-radius: 0;
-    }
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
 
-    .form-signin input[type="password"] {
-      margin-bottom: 10px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
-    }
-    footer{
-      position:absolute;
-      bottom:0;
-      left:0;
-      width:100%;
-    }
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+footer{
+  position:absolute;
+  bottom:0;
+  left:0;
+  width:100%;
+}
   </style>
 </head>
 
 <body class="text-center">
   <main class="form-signin w-100 m-auto">
-    <form action="" id="login">
-      <img class="mb-4" src="img/login.png" alt="" width="300" height="150">
+    <form>
+      <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
       <h1 class="h3 mb-3 fw-normal">Ingreso</h1>
-  <p id="alertuser"></p>
+  
       <div class="form-floating">
-        <input type="text" class="form-control" id="usuario" placeholder="usuario" name="user">
-        <label for="usuario">Usuario</label> 
-
+        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email</label>
       </div>
       <div class="form-floating">
-        <input type="password" class="form-control" id="pass" placeholder="Password" name="contra">
-        <label for="pass">Contraseña</label>
+        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <label for="floatingPassword">Contraseña</label>
       </div>
   
       <div class="checkbox mb-3">
@@ -118,7 +117,7 @@
           <input type="checkbox" value="remember-me"> Recordarme
         </label>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Ingresar</button>
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
     </form>
   </main>
