--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -119,8 +122,29 @@
         </label>
       </div>
       <button class="w-100 btn btn-lg btn-primary" type="submit">Ingresar</button>
+    </br>
+    <br>
+      
+      <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+      <script>
+        function onSignIn(googleUser) {
+          // Useful data for your client-side scripts:
+          var profile = googleUser.getBasicProfile();
+          console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+          console.log('Full Name: ' + profile.getName());
+          console.log('Given Name: ' + profile.getGivenName());
+          console.log('Family Name: ' + profile.getFamilyName());
+          console.log("Image URL: " + profile.getImageUrl());
+          console.log("Email: " + profile.getEmail());
+  
+          // The ID token you need to pass to your backend:
+          var id_token = googleUser.getAuthResponse().id_token;
+          console.log("ID Token: " + id_token);
+        }
+      </script>
       <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
     </form>
+    
   </main>
   <footer>
     <div class="container">
