--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  <meta name="google-signin-scope" content="profile email">
+  <!-- <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script> -->
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -125,11 +125,61 @@
     </br>
     <br>
       
-      <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+
+
+    <button id = "customBtn" type = "button"> inicio de sesión de Google </button>
+<div id="name"></div>
+<button type="button" onclick="signOut();">Sign out</button>
+  
+<script src="https://apis.google.com/js/api:client.js"></script>
+<script>
+	var googleUser = {};
+	var startApp = function() {
+		gapi.load('auth2', function(){
+		  // Retrieve the singleton for the GoogleAuth library and set up the client.
+		  auth2 = gapi.auth2.init({
+		     client_id: '398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com', // ID de cliente
+		    cookiepolicy: 'single_host_origin',
+		     alcance: 'perfil' // Puede solicitar datos distintos del 'perfil' y 'correo electrónico' predeterminados
+		  });
+		  attachSignin(document.getElementById('customBtn'));
+		});
+	};
+ 
+	function attachSignin(element) {
+		auth2.attachClickHandler(element, {},
+	    function(googleUser) {
+	      document.getElementById('name').innerText = "Signed in: " + googleUser.getBasicProfile().getName();
+		var profile = auth2.currentUser.get().getBasicProfile();
+		console.log('ID: ' + profile.getId());
+		console.log('Full Name: ' + profile.getName());
+		console.log('Given Name: ' + profile.getGivenName());
+		console.log('Family Name: ' + profile.getFamilyName());
+		console.log('Image URL: ' + profile.getImageUrl());
+		console.log('Email: ' + profile.getEmail());
+	    }, function(error) {
+	      console.log(JSON.stringify(error, undefined, 2));
+	    });
+	}
+	startApp();
+ 
+	 //Cerrar sesión
+	function signOut() {
+		var auth2 = gapi.auth2.getAuthInstance();
+		auth2.signOut().then(function () {
+			 alert ('El cierre de sesión del usuario es exitoso');
+		});
+	}
+</script>
+
+
+
+      <!-- <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
       <script>
         function onSignIn(googleUser) {
           // Useful data for your client-side scripts:
           var profile = googleUser.getBasicProfile();
+          console.log("Ingresado?" + GoogleUser.isSignedIn());
           console.log("ID: " + profile.getId()); // Don't send this directly to your server!
           console.log('Full Name: ' + profile.getName());
           console.log('Given Name: ' + profile.getGivenName());
@@ -141,7 +191,7 @@
           var id_token = googleUser.getAuthResponse().id_token;
           console.log("ID Token: " + id_token);
         }
-      </script>
+      </script> -->
       <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
     </form>
     
