--- a/index.html
+++ b/index.html
@@ -125,9 +125,16 @@
     </br>
     <br>
       
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <div id="g_id_onload"
+         data-client_id="398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com"
+         data-ux_mode="redirect"
+         data-login_uri="https://www.example.com/your_login_endpoint">
+    </div>
+    <div class="g_id_signin" data-type="standard"></div>
+  </body>
 
-
-    <button id = "customBtn" type = "button"> inicio de sesión de Google </button>
+    <!-- <button id = "customBtn" type = "button"> inicio de sesión de Google </button>
 <div id="name"></div>
 <button type="button" onclick="signOut();">Sign out</button>
   
@@ -172,7 +179,7 @@
 			 alert ('El cierre de sesión del usuario es exitoso');
 		});
 	}
-</script>
+</script> -->
 
 
 
