--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div id="g_id_onload"
          data-client_id="398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com"
          data-ux_mode="redirect"
-         data-login_uri="https://todobanners.github.io/e-comercio/">
+         data-login_uri="https://todobanners.github.io/e-comercio/home.html">
     </div>
     <div class="g_id_signin" data-type="standard"></div>
   </body>
