--- a/products.html
+++ b/products.html
@@ -39,7 +39,7 @@
   <main class="pb-5 container">
     <div class="text-center p-4">
       <h2>Productos</h2>
-      <p class="lead">Verás aquí todos los productos de la categoria <b>Autos</b>.</p>
+      <p class="lead" id="textoP"></p>
     </div>
     <div class="container">
       <div class="row">
