--- a/index.html
+++ b/index.html
@@ -125,10 +125,37 @@
       <br>
 
       <script src="https://accounts.google.com/gsi/client" async defer></script>
-      <div id="g_id_onload" data-client_id="398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com"
+      <script src="/js/jwt-decode.js" async defer></script>
+      <!-- <div id="g_id_onload" data-client_id=""
         data-ux_mode="redirect" data-login_uri="https://todobanners.github.io/e-comercio/home.html">
-      </div>
-      <div class="g_id_signin" data-type="standard"></div>
+      </div> -->
+
+
+      <div id="g_id_onload"
+     data-client_id="398768042483-utsd1pdv0c5gisup59i7hl34vlp504h7.apps.googleusercontent.com"
+     data-callback="handleCredentialResponse">
+</div>
+<script>
+  function handleCredentialResponse(response) {
+     // decodeJwtResponse() is a custom function defined by you
+     // to decode the credential response.
+     const responsePayload = jwt_decode(response.credential);
+
+     console.log("ID: " + responsePayload.sub);
+     console.log('Full Name: ' + responsePayload.name);
+     console.log('Given Name: ' + responsePayload.given_name);
+     console.log('Family Name: ' + responsePayload.family_name);
+     console.log("Image URL: " + responsePayload.picture);
+     console.log("Email: " + responsePayload.email);
+     document.getElementById("datosgoogle").innerHTML = `<h3>Bienvenido ${responsePayload.name}</h3>
+    <img src="${responsePayload.picture}">
+     <p>Tu correo es ${responsePayload.email}</p><p>Ya puedes ingresar al sitio</p>`;
+     document.getElementById("usuario").value = responsePayload.email;
+     document.getElementById("pass").value = responsePayload.sub;
+  }
+</script>
+      <div class="g_id_signin" data-type="standard" data-width="300"></div>
+      <div id="datosgoogle"></div>
       <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
     </form>
 
