bug boton google

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <br>
 
       <script src="https://accounts.google.com/gsi/client" async defer></script>
-      <script src="/js/jwt-decode.js" async defer></script>
+      <script src="js/jwt-decode.js" async defer></script>
       <!-- <div id="g_id_onload" data-client_id=""
         data-ux_mode="redirect" data-login_uri="https://todobanners.github.io/e-comercio/home.html">
       </div> -->
