--- a/products.html
+++ b/products.html
@@ -74,7 +74,9 @@
             </div>
           </div>
         </div>
+        
       </div>
+      <div class="p-2"><input type="search" name="b" id="buscador" class="form-control" placeholder="Buscador"></div>
       
       <div class="row">
         <div id="cat-list-container">
