Mejoras en el listado

--- a/products.html
+++ b/products.html
@@ -83,7 +83,8 @@
         </span>
       </div>
       <div class="row">
-        <div id="prod-list-container">
+        
+        <div id="prod-list-container" class="row row-cols-1 row-cols-md-3 g-4">
         </div>
       </div>
     </div>
