Mejoras en listado

--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
       </div>
       <div class="row">
         <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
-          <div class="row container p-0 m-0">
+          <div class="row container">
             <div class="col">
               <p class="font-weight-normal text-end my-2">Precio</p>
             </div>
@@ -76,7 +76,7 @@
         </div>
 
       </div>
-      <div class="input-group rounded pb-1">
+      <div class="input-group rounded">
         <input type="search" name="b" id="buscador" class="form-control rounded" placeholder="Buscar" />
         <span class="input-group-text border-0">
           <i class="fas fa-search"></i>
@@ -84,7 +84,7 @@
       </div>
       <div class="row">
         
-        <div id="prod-list-container" class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="prod-list-container" class="row row-cols-1 row-cols-md-3 g-1">
         </div>
       </div>
     </div>
