--- a/products.html
+++ b/products.html
@@ -46,9 +46,9 @@
         <div class="col text-end">
           <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
             <input type="radio" class="btn-check" name="options" id="sortAsc">
-            <label class="btn btn-dark" for="sortAsc"><i class="fas fa-sort-numeric-down mr-1"></i>$</label>
+            <label class="btn btn-dark" for="sortAsc"><i class="fas fa-sort-numeric-up-alt"></i>$</label>
             <input type="radio" class="btn-check" name="options" id="sortDesc">
-            <label class="btn btn-dark" for="sortDesc"><i class="fas fa-sort-numeric-down-alt mr-1"></i>$</label>
+            <label class="btn btn-dark" for="sortDesc"><i class="fas fa-sort-numeric-down-alt"></i>$</label>
             <input type="radio" class="btn-check" name="options" id="sortByCount" checked>
             <label class="btn btn-dark" for="sortByCount"><i class="fas fa-sort-amount-down mr-1"></i>Rel.</label>
           </div>
