--- a/product-info.html
+++ b/product-info.html
@@ -37,11 +37,40 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+    <div class="container" id="contenido">
+
     </div>
+    <hr>
+    <div id="imagenes" class="container p-4">
+
+    </div>
+    <hr>
+    <div id="comentarios" class="container p-4">
+
+    </div>
+    <div id="creacomentario" class="container p-4">
+      <form id="formulario">
+        <div class="mb-3">
+          <label for="comentario" class="form-label">Comentario</label>
+          <textarea class="form-control" name="comentario" id="comentario" rows="3"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="" class="form-label">Calificacion</label>
+          <select class="form-control" name="rating" id="rating">
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+          </select>
+        </div>
+        <div class="d-grid gap-2">
+          <button type="submit" name="enviar" id="enviar" class="btn btn-primary">Enviar comentario</button>
+        </div>
+      </form>
+    </div>
+    <hr>
   </main>
   <footer class="text-muted">
     <div class="container">
