--- a/product-info.html
+++ b/product-info.html
@@ -49,7 +49,8 @@
 
     </div>
     <div id="creacomentario" class="container p-4">
-      <form id="formulario">
+      <div class="row">
+      <form id="formulario" class="col-md-6">
         <div class="mb-3">
           <label for="comentario" class="form-label">Comentario</label>
           <textarea class="form-control" name="comentario" id="comentario" rows="3"></textarea>
@@ -57,18 +58,19 @@
         <div class="mb-3">
           <label for="" class="form-label">Calificacion</label>
           <select class="form-control" name="rating" id="rating">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
+            <option value="0">0 estrellas</option>
+            <option value="1">1 estrellas</option>
+            <option value="2">2 estrellas</option>
+            <option value="3">3 estrellas</option>
+            <option value="4">4 estrellas</option>
+            <option value="5">5 estrellas</option>
           </select>
         </div>
         <div class="d-grid gap-2">
           <button type="submit" name="enviar" id="enviar" class="btn btn-primary">Enviar comentario</button>
         </div>
       </form>
+    </div>
     </div>
     <hr>
   </main>
