titulo en imagen

--- a/product-info.html
+++ b/product-info.html
@@ -42,7 +42,7 @@
     </div>
     <hr>
     <div id="imagenes" class="container p-4">
-
+      <h4 class="p-2">Imagenes</h4>
     </div>
     <hr>
     <div id="comentarios" class="container p-4">
