--- a/product-info.html
+++ b/product-info.html
@@ -40,25 +40,46 @@
     <div class="container" id="contenido">
 
     </div>
-    <hr>
+    <!-- <hr>
+
+    <div class="row">
+      <div class="col text-start">
+        <div class="btn-group btn-group mb-4" data-bs-toggle="buttons">
+          <input type="radio" class="btn-check" name="rating" id="r1" value="1" checked>
+          <label class="btn btn-dark" for="r1"><span class="fa fa-star checked"></span></label>
+          <input type="radio" class="btn-check" name="rating" id="r2" value="2">
+          <label class="btn btn-dark" for="r2"><span class="fa fa-star"></span></label>
+          <input type="radio" class="btn-check" name="rating" id="r3" value="3">
+          <label class="btn btn-dark" for="r3"><span class="fa fa-star"></span></label>
+          <input type="radio" class="btn-check" name="rating" id="r4" value="4">
+          <label class="btn btn-dark" for="r4"><span class="fa fa-star"></span></label>
+          <input type="radio" class="btn-check" name="rating" id="r5" value="5">
+          <label class="btn btn-dark" for="r5"><span class="fa fa-star"></span></label>
+        </div>
+      </div>
+    </div> -->
+
     <div id="imagenes" class="container p-4">
-      <h4 class="p-2">Imagenes</h4>
+      <h4 class="p-2">Imágenes</h4>
     </div>
     <hr>
     <div id="comentarios" class="container p-4">
+      
 
     </div>
     <div id="creacomentario" class="container p-4">
+      <h4>Comentarios</h4>
       <div class="row">
       <form id="formulario" class="col-md-6">
         <div class="mb-3">
-          <label for="comentario" class="form-label">Comentario</label>
-          <textarea class="form-control" name="comentario" id="comentario" rows="3"></textarea>
+          <label for="comentario" class="form-label">
+            <p>Deja tu comentario</p>
+          </label>
+          <textarea class="form-control" name="comentario" id="comentario" rows="3" required></textarea>
         </div>
         <div class="mb-3">
-          <label for="" class="form-label">Calificacion</label>
+          <label for="rating" class="form-label">Calificación</label>
           <select class="form-control" name="rating" id="rating">
-            <option value="0">0 estrellas</option>
             <option value="1">1 estrellas</option>
             <option value="2">2 estrellas</option>
             <option value="3">3 estrellas</option>
