--- a/product-info.html
+++ b/product-info.html
@@ -66,14 +66,15 @@
     </div>
 
     <hr>
-    <div id="comentarios" class="container p-4">
+    <div class="row justify-content-center">
+    <div id="comentarios" class="col-10">
       
 
-    </div>
+    </div></div>
     <div id="creacomentario" class="container p-4">
       <h4>Comentarios</h4>
-      <div class="row">
-      <form id="formulario" class="col-md-6">
+      <div class="row justify-content-center">
+      <form id="formulario" class="col-md-8">
         <div class="mb-3">
           <label for="comentario" class="form-label">
             <p>Deja tu comentario</p>
