--- a/product-info.html
+++ b/product-info.html
@@ -43,7 +43,7 @@
 
     </div>
      
-    <div id="carouselExampleControls" class="col-md-8 carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleControls" class="col-md-8 carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-inner" id="imagenes">
         
       </div>
