Comentarios y mejoras en HTML

--- a/product-info.html
+++ b/product-info.html
@@ -69,9 +69,7 @@
       <div class="row justify-content-center">
       <form id="formulario" class="col-md-8">
         <div class="mb-3">
-          <label for="comentario" class="form-label">
-            <p>Deja tu comentario</p>
-          </label>
+          <label for="comentario" class="form-label">Deja tu comentario</label>
           <textarea class="form-control" name="comentario" id="comentario" rows="3" required></textarea>
         </div>
         <div class="mb-3">
