--- a/cart.html
+++ b/cart.html
@@ -37,8 +37,12 @@
   </nav>
   <main>
     <div class="container">
-      <div id="tablaCarrito"></div>
-      
+      <div id="tablaCarrito">
+        <h3 class="mt-4">Carrito de compra</h3>
+      </div>
+      <div id="formularioEnvio">
+        
+      </div>
     </div>
   </main>
   <footer class="text-muted">
