--- a/product-info.html
+++ b/product-info.html
@@ -42,7 +42,7 @@
     <div class="col-10 p-4" id="contenido">
 
     </div>
-     
+    <div id="btnComprar"></div>
     <div id="carouselExampleControls" class="col-md-8 carousel carousel-dark slide" data-bs-ride="carousel">
       <div class="carousel-inner" id="imagenes">
         
