Costos OK, agregando modal para forma de pago

--- a/cart.html
+++ b/cart.html
@@ -105,6 +105,32 @@
         </div>
 
       </div>
+
+      <div id="formaPago">
+        <h3 class="mt-4">Forma de pago</h3>
+
+
+<!-- Modal -->
+<div class="modal fade" id="formaPagoModal" tabindex="-1" aria-labelledby="modalFormularioMetodo" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="modalFormularioMetodo">Forma de pago</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar ventana</button>
+        <button type="button" class="btn btn-primary">Guardar cambios</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+        <p id="formaSeleccionada">Forma de pago <a href="#" data-bs-toggle="modal" data-bs-target="#formaPagoModal">seleccionar</a></p>
+      </div>
     </div>
   </main>
   <footer class="text-muted">
