--- a/cart.html
+++ b/cart.html
@@ -119,11 +119,41 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ...
+        <form class="row g-3" data-dashlane-rid="9111bfe67d56abdc" data-form-type="login">
+          <div class="form-check">
+            <input value="credito" class="form-check-input" type="radio" name="seleccionPago" id="credito">
+            <label class="form-check-label" for="credito">
+              Tarjeta de credito
+            </label>
+          </div>
+          <hr>
+          <div class="col-md-6">
+            <label for="inputEmail4" class="form-label">Numero de tarjeta</label>
+            <input type="text" class="form-control" id="inputEmail4" data-form-type="email">
+          </div>
+          <div class="col-md-6">
+            <label for="inputPassword4" class="form-label">Codigo de seguridad (CVV)</label>
+            <input type="text" class="form-control" id="inputPassword4" data-form-type="password">
+          </div>
+          <div class="col-6">
+            <label for="inputAddress" class="form-label">Vencimiento MM/AA</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" data-form-type="address">
+          </div>
+          <div class="form-check">
+            <input value="banco" class="form-check-input" type="radio" name="seleccionPago" id="banco">
+            <label class="form-check-label" for="banco">
+              Transferencia bancaria
+            </label>
+          </div>
+          <hr>
+          <div class="col-md-12">
+            <label for="inputZip" class="form-label">Numero de cuenta</label>
+            <input type="text" class="form-control" id="inputZip" data-form-type="address,zip">
+          </div>
+        </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar ventana</button>
-        <button type="button" class="btn btn-primary">Guardar cambios</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" id="btnCerrarModal">Cerrar ventana</button>
       </div>
     </div>
   </div>
