UI forma de pago funcional

--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
   </nav>
   <main>
     <div class="container">
-      <form action="">
+      <form action="" class="needs-validation" novalidate>
       <div id="tablaCarrito">
         <h3 class="mt-4">Carrito de compra</h3>
       </div>
@@ -124,7 +124,7 @@
         <div class="row g-3">
           <div class="form-check">
             <input value="credito" class="form-check-input" type="radio" name="seleccionPago" id="credito">
-            <label class="form-check-label" for="credito">
+            <label class="form-check-label" for="credito" >
               Tarjeta de credito
             </label>
           </div>
@@ -142,7 +142,7 @@
             <input type="text" class="form-control" id="vencimientoTarjeta" placeholder="25/03" data-form-type="address">
           </div>
           <div class="form-check">
-            <input value="banco" class="form-check-input" type="radio" name="seleccionPago" id="banco">
+            <input value="banco" class="form-check-input" type="radio" name="seleccionPago" id="banco" >
             <label class="form-check-label" for="banco">
               Transferencia bancaria
             </label>
