--- a/cart.html
+++ b/cart.html
@@ -135,17 +135,17 @@
           <hr>
           <div class="col-md-6">
             <label for="numeroTarjeta" class="form-label">Numero de tarjeta</label>
-            <input type="number" class="form-control" id="numeroTarjeta">
+            <input type="number" class="form-control" id="numeroTarjeta" disabled>
             <div class="invalid-feedback">Ingrese un numero</div>
           </div>
           <div class="col-md-6">
             <label for="codigoSeguridad" class="form-label">Codigo de seguridad (CVV)</label>
-            <input type="number" class="form-control" id="codigoSeguridad">
+            <input type="number" class="form-control" id="codigoSeguridad" disabled>
             <div class="invalid-feedback">Ingrese un numero</div>
           </div>
           <div class="col-6">
             <label for="vencimientoTarjeta" class="form-label">Vencimiento MM/AA</label>
-            <input type="text" class="form-control" id="vencimientoTarjeta" placeholder="25/03" data-form-type="address">
+            <input type="text" class="form-control" id="vencimientoTarjeta" placeholder="25/03" data-form-type="address" disabled>
             <div class="invalid-feedback">Ingrese la fecha</div>
           </div>
           <div class="form-check">
@@ -157,7 +157,7 @@
           <hr>
           <div class="col-md-12">
             <label for="numeroCuentaBanco" class="form-label">Numero de cuenta</label>
-            <input type="number" class="form-control" id="numeroCuentaBanco">
+            <input type="number" class="form-control" id="numeroCuentaBanco" disabled>
             <div class="invalid-feedback">Ingrese un numero</div>
           </div>
         </div>
