--- a/cart.html
+++ b/cart.html
@@ -83,10 +83,9 @@
           </div>
         </div>
       </div>
+
       <div id="subTotal">
-
         <h3 class="mt-4">Costos</h3>
-
         <div class="list-group">
           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
@@ -168,6 +167,7 @@
     </div>
   </div>
 </div>
+<!-- fin modal -->
 
         <p>Forma de pago <a href="#" data-bs-toggle="modal" data-bs-target="#formaPagoModal" id="formaSeleccionada">seleccionar</a></p>
         <div id="formaPagoValido" class="invalid-feedback">
