Mejoras con el email, login y localstorage

--- a/login.html
+++ b/login.html
@@ -98,8 +98,8 @@
       <h1 class="h3 mb-3 fw-normal">Ingreso</h1>
       <p id="alertuser"></p>
       <div class="form-floating">
-        <input type="text" class="form-control" id="usuario" placeholder="usuario" name="user">
-        <label for="usuario">Usuario</label>
+        <input type="email" class="form-control" id="usuario" placeholder="usuario" name="user">
+        <label for="usuario">Usuario (e-mail)</label>
 
       </div>
       <div class="form-floating">
