--- a/my-profile.html
+++ b/my-profile.html
@@ -61,7 +61,7 @@
 
       <form class="row g-3 needs-validation" novalidate id="formulario" enctype="multipart/form-data">
         <div class="col-6">
-          <label for="inpPrimerNombre" class="form-label">Primer nombre</label>
+          <label for="inpPrimerNombre" class="form-label">Primer nombre*</label>
           <input type="text" class="form-control" id="inpPrimerNombre" placeholder="Pepe" required>
           <div class="invalid-feedback">Necesito tu primer nombre</div>
         </div>
@@ -70,7 +70,7 @@
           <input type="text" class="form-control" id="inpSegundoNombre" placeholder="Jose">
         </div>
         <div class="col-6">
-          <label for="inpPrimerApellido" class="form-label">Primer apellido</label>
+          <label for="inpPrimerApellido" class="form-label">Primer apellido*</label>
           <input type="text" class="form-control" id="inpPrimerApellido" placeholder="Pancrasio" required>
           <div class="invalid-feedback">Necesito tu apellido</div>
         </div>
@@ -84,7 +84,7 @@
           <div class="invalid-feedback">Debe ser una direccion de email algo@dominio.com</div>
         </div>
         <div class="col-md-6">
-          <label for="inpCelular" class="form-label">Celular</label>
+          <label for="inpCelular" class="form-label">Celular*</label>
           <input type="tel" pattern="[0-9]{9}" class="form-control" id="inpCelular" placeholder="090000000" required>
           <div class="invalid-feedback">Debe ser un numero de telefono de almenos 9 digitos </div>
         </div>
