--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
   </nav>
   <main>
     <div class="container">
-      <form action="" method="post" class="needs-validation" novalidate id="formulario">
+      <form action="https://ecomerciojap.onrender.com/compra" method="post" class="needs-validation" novalidate id="formulario">
       <div id="tablaCarrito">
         <h3 class="mt-4">Carrito de compra</h3>
       </div>
